@@ -1,3 +1,8 @@
+2010-02-26 Jesse Kornblum
+
+	* Adding 'expert' mode from md5deep to hashdeep.
+	
+
 2010-02-25 Jesse Kornblum
 
 	* Changed all contact email addresses to research account at
